# cmake_build_qmake

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp
lib/: main_qt.cpp  main_qt.hpp  untitled_cli.pro
